fix align content for middle

--- a/css/page4.css
+++ b/css/page4.css
@@ -23,7 +23,6 @@
 }
 audio {
     width: 100%;
-    background-color: violet;
 }
 
 table.shorttable {
@@ -92,56 +91,57 @@ tbody tr > td {
     tablemain{
         width: 768px;
     }
-.verticalLine {
-    border-left: solid;
-    /*height: 40%;*/
-    border-width: 1px;
-    border-color: grey;
-    margin-top: 8%;
-}
+    .verticalLine {
+        border-left: solid;
+        /*height: 40%;*/
+        border-width: 1px;
+        border-color: grey;
+        margin-top: 8%;
+    }
 
-.horiozntalLine {
-    border-bottom: solid;
-    border-width: 1px;
-    border-color: grey;
-    margin-bottom: 30px;
-    /*width: 768px;*/
-    
-}
+    .horiozntalLine {
+        border-bottom: solid;
+        border-width: 1px;
+        border-color: grey;
+        margin-bottom: 30px;
+        /*width: 768px;*/
+        
+    }
 
-/*.graphtable{*/
-/*    width: 768px;*/
-/*}*/
-table.shorttable {
-    width:100%;
-    border-collapse: separate;
-    border-spacing: 1px;
-    text-align: left;
-    line-height: 1.5;
-    border-top: 1px solid #ccc;
-    margin : 2% 2%;
-    font-size: 16px;
-    table-layout: fixed;
-}
-table.shorttable th {
-    font-weight: lighter;
-    vertical-align: top;
-    border-bottom: 1px solid #ccc;
-    font-size: 12px;
-    color: skyblue;
-    padding: 5px;
-}
-table.shorttable td {
-    padding: 10px;
-    vertical-align: top;
-    border-bottom: 1px solid #ccc;
-    font-weight: lighter;
-    overflow: hidden;
-    text-overflow:ellipsis; 
-    white-space:nowrap;
-    font-size: 11px;
-}
+    /*.graphtable{*/
+    /*    width: 768px;*/
+    /*}*/
+    table.shorttable {
+        width:100%;
+        border-collapse: separate;
+        border-spacing: 1px;
+        text-align: left;
+        line-height: 1.5;
+        border-top: 1px solid #ccc;
+        margin : 2% 2%;
+        font-size: 16px;
+        table-layout: fixed;
+    }
+    table.shorttable th {
+        font-weight: lighter;
+        vertical-align: top;
+        border-bottom: 1px solid #ccc;
+        font-size: 12px;
+        color: skyblue;
+        padding: 5px;
+    }
+    table.shorttable td {
+        padding: 10px;
+        vertical-align: top;
+        border-bottom: 1px solid #ccc;
+        font-weight: lighter;
+        overflow: hidden;
+        text-overflow:ellipsis; 
+        white-space:nowrap;
+        font-size: 11px;
+    }
 
-.shorter{
-    width: 53.5px;
+    .shorter{
+        width: 53.5px;
+    }
 }
